--- a/capsule-core/pom.xml
+++ b/capsule-core/pom.xml
@@ -20,7 +20,7 @@
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20.1</version>
+        <version>3.0.0-M5</version>
         <configuration>
           <argLine>${argLine}</argLine>
         </configuration>
