--- a/capsule-veritas/pom.xml
+++ b/capsule-veritas/pom.xml
@@ -20,9 +20,9 @@
     <plugins>
       <plugin>
         <artifactId>maven-surefire-plugin</artifactId>
-        <version>2.20.1</version>
+        <version>3.0.0-M5</version>
         <configuration>
-          <argLine>${argLine}</argLine>
+          <argLine>--enable-preview ${argLine}</argLine>
         </configuration>
       </plugin>
       <plugin>
