--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
       <url>https://raw.githubusercontent.com/usethesource/capsule/master/LICENSE</url>
     </license>
   </licenses>
-  
+
   <scm>
     <developerConnection>scm:git:ssh://git@github.com/usethesource/capsule.git</developerConnection>
     <tag>HEAD</tag>
@@ -47,8 +47,8 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <maven.compiler.source>1.8</maven.compiler.source>
+    <maven.compiler.target>16</maven.compiler.target>
+    <maven.compiler.source>16</maven.compiler.source>
     <maven.javadoc.failOnError>false</maven.javadoc.failOnError>
     <topleveldir>${project.basedir}</topleveldir>
     <jacoco.reportPath>${topleveldir}/target/jacoco.exec</jacoco.reportPath>
@@ -56,6 +56,19 @@
 
   <build>
     <plugins>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.8.1</version>
+        <configuration>
+          <fork>true</fork>
+          <verbose>true</verbose>
+          <optimize>true</optimize>
+          <compilerArgs>
+            <arg>--enable-preview</arg>
+          </compilerArgs>
+        </configuration>
+      </plugin>
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-source-plugin</artifactId>
@@ -74,34 +87,34 @@
         <artifactId>maven-release-plugin</artifactId>
         <version>2.5.3</version>
       </plugin>
-      <plugin>
-        <groupId>org.jacoco</groupId>
-        <artifactId>jacoco-maven-plugin</artifactId>
-        <version>0.7.9</version>
-        <!-- <configuration>
-          <destfile>${topleveldir}/target/jacoco.exec</destfile>
-          <datafile>${topleveldir}/target/jacoco.exec</datafile>
-        </configuration> -->
-        <executions>
-          <execution>
-            <goals>
-                <goal>prepare-agent</goal>
-            </goals>
-            <configuration>
-              <append>true</append>
-              <dataFile>${topleveldir}/target/jacoco.exec</dataFile>
-              <destFile>${topleveldir}/target/jacoco.exec</destFile>
-            </configuration>
-          </execution>
-          <!-- <execution>
-            <id>report</id>
-            <phase>prepare-package</phase>
-            <goals>
-              <goal>report</goal>
-            </goals>
-          </execution> -->
-        </executions>
-      </plugin>
+<!--      <plugin>-->
+<!--        <groupId>org.jacoco</groupId>-->
+<!--        <artifactId>jacoco-maven-plugin</artifactId>-->
+<!--        <version>0.8.5</version>-->
+<!--        &lt;!&ndash; <configuration>-->
+<!--          <destfile>${topleveldir}/target/jacoco.exec</destfile>-->
+<!--          <datafile>${topleveldir}/target/jacoco.exec</datafile>-->
+<!--        </configuration> &ndash;&gt;-->
+<!--        <executions>-->
+<!--          <execution>-->
+<!--            <goals>-->
+<!--                <goal>prepare-agent</goal>-->
+<!--            </goals>-->
+<!--            <configuration>-->
+<!--              <append>true</append>-->
+<!--              <dataFile>${topleveldir}/target/jacoco.exec</dataFile>-->
+<!--              <destFile>${topleveldir}/target/jacoco.exec</destFile>-->
+<!--            </configuration>-->
+<!--          </execution>-->
+<!--          &lt;!&ndash; <execution>-->
+<!--            <id>report</id>-->
+<!--            <phase>prepare-package</phase>-->
+<!--            <goals>-->
+<!--              <goal>report</goal>-->
+<!--            </goals>-->
+<!--          </execution> &ndash;&gt;-->
+<!--        </executions>-->
+<!--      </plugin>-->
 
 
       <!--
